# genspark-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: .env.example  chat.py
src/genspark/: __init__.py  client.py
