[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genspark-unofficial"
version = "0.1.0"
description = "Unofficial Python client for the Genspark.ai AI chat web app (B2C login + streaming chat)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "genspark-py contributors" }]
keywords = ["genspark", "ai", "chat", "client", "unofficial", "claude", "gemini", "gpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "curl_cffi>=0.7",
]

[project.urls]
Homepage = "https://github.com/SharpWizard/genspark-py"
Issues = "https://github.com/SharpWizard/genspark-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genspark = ["py.typed"]
